# genart

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  image_config.yml  palettes.yml
assets/: README.md
docs/: systems-to-explore.md
outputs/: README.md
sketches/: README.md
sketches/cpp/: README.md
sketches/julia/: README.md
sketches/p5js/: README.md
sketches/p5js/spirograph_playground/: index.html  palettes.yml  sketch.js  style.css
sketches/processing/: README.md
sketches/processing/clifford_attractor_basic/: clifford_attractor_basic.pde
sketches/processing/grainy_sorta_spirograph/: grainy_sorta_spirograph.pde
sketches/python/: README.md
sketches/r/: README.md
sketches/rust/: README.md
sketches/rust/fbm_fields/: Cargo.toml  README.md
sketches/rust/fbm_fields/src/: image_config.rs  main.rs
sketches/rust/physarum/: Cargo.toml  README.md
sketches/rust/physarum/src/: main.rs
tools/: build_spirograph.sh
