[package]
name = "fbm_fields"
version = "0.1.0"
edition = "2021"
description = "Domain-warped fbm noise renderer. Ports DopeGenerativeArt's make_gas_giants and make_river_section from R."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colorgrad = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
noise = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
